--- a/src/.travis.yml
+++ b/src/.travis.yml
@@ -1,8 +1,11 @@
 language: node_js
 node_js: node
-
+cache: npm
+install:
+  - npm ci
 script:
   - npm test
+  - npm run build
 deploy:
   provider: heroku
   api_key:
