--- a/.github/workflows/ci-actions.yml
+++ b/.github/workflows/ci-actions.yml
@@ -1,7 +1,6 @@
 name: Node.js CI
 
 on:
-  push:
   pull_request:
     branches:
       - develop
@@ -15,7 +14,8 @@ jobs:
         node-version: [12.x]
 
     steps:
-      - uses: actions/checkout@v2
+      - name: Copy all sources
+        uses: actions/checkout@v2
       - name: Use Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v1
         with:
@@ -27,13 +27,14 @@ jobs:
           key: v1-npm-deps-${{ hashFiles('**/package-lock.json') }}
           restore-keys: v1-npm-deps-
       - name: Install dependencies
-      - run: npm ci
+        run: npm ci
       - name: Run tests
-      - run: npm test
+        run: npm test
       - name: Build
-      - run: npm run build --if-present
+        run: npm run build --if-present
       - name: Deploy on heroku
-      - uses: akhileshns/heroku-deploy@v3.6.8
+        id: heroku
+        uses: akhileshns/heroku-deploy@v3.6.8
         with:
           heroku_api_key: ${{secrets.HEROKU_API_KEY2}}
           heroku_app_name: "heroku-baz"
