--- a/.github/workflows/ci-actions.yml
+++ b/.github/workflows/ci-actions.yml
@@ -1,4 +1,4 @@
-name: Node.js CI
+name: GitHub Actions CI/CD Heroku
 
 on:
   pull_request:
@@ -26,18 +26,22 @@ jobs:
           path: ~/.npm
           key: v1-npm-deps-${{ hashFiles('**/package-lock.json') }}
           restore-keys: v1-npm-deps-
-      - name: Install dependencies
-        run: npm ci
-      - name: Run tests
-        run: npm test
-      - name: Build
-        run: npm run build --if-present
+      - name: Install, build, test
+        run: |
+          npm ci
+          npm run build
+          npm test
+        env:
+          CI: true
+
+  deploy:
+    needs: build
+
+    steps:
       - name: Deploy on heroku
         id: heroku
         uses: akhileshns/heroku-deploy@v3.6.8
         with:
           heroku_api_key: ${{secrets.HEROKU_API_KEY2}}
           heroku_app_name: "heroku-baz"
-          heroku_email: "antongluschuk11@gmail.com"
-        env:
-          CI: true
+          heroku_email: ${{secrets.HEROKU_EMAIL}}
