added few lines to deploy job

--- a/.github/workflows/ci-actions.yml
+++ b/.github/workflows/ci-actions.yml
@@ -36,8 +36,13 @@ jobs:
 
   deploy:
     needs: build
-
+    runs-on: ubuntu-latest
     steps:
+      - name: Use source code and setup node
+        uses: actions/checkout@v1
+        uses: actions/setup-node@v1
+        with:
+          node-version: 12.16.1
       - name: Deploy on heroku
         id: heroku
         uses: akhileshns/heroku-deploy@v3.6.8
