--- a/.github/workflows/ci-actions.yml
+++ b/.github/workflows/ci-actions.yml
@@ -38,8 +38,9 @@ jobs:
     needs: build
     runs-on: ubuntu-latest
     steps:
-      - name: Use source code and setup node
+      - name: Use source code
         uses: actions/checkout@v1
+      - name: Install node
         uses: actions/setup-node@v1
         with:
           node-version: 12.16.1
