--- a/.github/workflows/ci-cd-on-develop.yml
+++ b/.github/workflows/ci-cd-on-develop.yml
@@ -39,3 +39,4 @@ jobs:
           heroku_api_key: ${{secrets.HEROKU_API_KEY2}}
           heroku_app_name: "heroku-baz"
           heroku_email: ${{secrets.HEROKU_EMAIL}}
+          branch: develop
