--- a/.github/workflows/ci-cd-on-develop.yml
+++ b/.github/workflows/ci-cd-on-develop.yml
@@ -33,9 +33,12 @@ jobs:
           npm test
         env:
           CI: true
-      - name: Deploy on heroku
-        uses: akhileshns/heroku-deploy@v3.6.8
+      - name: Build the tagged Docker image
+        run: docker build -f .docker/baz.Dockerfile -t baz .
+        id: heroku
+        uses: snithyanantham/docker-compose-multiple-apps-heroku-deploy@v1.0
         with:
-          heroku_api_key: ${{secrets.HEROKU_API_KEY2}}
-          heroku_app_name: "heroku-baz"
-          heroku_email: ${{secrets.HEROKU_EMAIL}}
+          email: ${{ secrets.HEROKU_EMAIL }}
+          api_key: ${{ secrets.HEROKU_API_KEY2 }}
+          docker_compose_file: ".docker/docker-compose.yml"
+          heroku_apps: '[{"imagename":"baz","appname":"heroku-baz-release","apptype":"web"}]'
