--- a/.github/workflows/ci-cd-on-develop.yml
+++ b/.github/workflows/ci-cd-on-develop.yml
@@ -1,9 +1,9 @@
 name: GitHub Actions CI/CD Heroku
 
 on:
-  push:
+  pull_request:
     branches:
-      - release
+      - develop
 
 jobs:
   build:
